--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,5 @@
+\input{introduction.tex}
+
 \documentclass{article}
 \usepackage[english]{babel}
 \usepackage[a4,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
